--- a/DiabloReader/DiabloReader.csproj
+++ b/DiabloReader/DiabloReader.csproj
@@ -61,6 +61,8 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="apikey.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
