--- a/DiabloReader/BlizzardApiReader.csproj
+++ b/DiabloReader/BlizzardApiReader.csproj
@@ -45,14 +45,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DiabloApi.cs" />
-    <Compile Include="Models\Artisan.cs" />
-    <Compile Include="Models\BattleAccount.cs" />
-    <Compile Include="Models\Hero.cs" />
-    <Compile Include="Models\IApiReadable.cs" />
-    <Compile Include="Models\Quest.cs" />
-    <Compile Include="Models\Season.cs" />
-    <Compile Include="Models\StoryAct.cs" />
+    <Compile Include="Diablo\DiabloApi.cs" />
+    <Compile Include="Diablo\Models\Artisan.cs" />
+    <Compile Include="Diablo\Models\BattleAccount.cs" />
+    <Compile Include="Diablo\Models\Hero.cs" />
+    <Compile Include="Diablo\Models\Quest.cs" />
+    <Compile Include="Diablo\Models\Season.cs" />
+    <Compile Include="Diablo\Models\StoryAct.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ApiReader.cs" />
@@ -63,6 +62,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="apikey.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Starcraft\" />
+    <Folder Include="WorldOfWarcaraft\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
