Added ApiConfiguration. Changed how ApiReader work.

--- a/BlizzardApiReader/BlizzardApiReader.csproj
+++ b/BlizzardApiReader/BlizzardApiReader.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApiConfiguration.cs" />
     <Compile Include="Diablo\DiabloApi.cs" />
     <Compile Include="Diablo\Models\Artisan.cs" />
     <Compile Include="Diablo\Models\BattleAccount.cs" />
