--- a/BlizzardApiReader/BlizzardApiReader.csproj
+++ b/BlizzardApiReader/BlizzardApiReader.csproj
@@ -5,9 +5,9 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{68B23C35-AD7E-4BC1-B26D-34BBC2C4205E}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>DiabloReader</RootNamespace>
-    <AssemblyName>DiabloReader</AssemblyName>
+    <OutputType>Library</OutputType>
+    <RootNamespace>BlizzardApiReader</RootNamespace>
+    <AssemblyName>BlizzardApiReader</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -30,6 +30,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
@@ -54,7 +57,6 @@
     <Compile Include="Diablo\Models\Quest.cs" />
     <Compile Include="Diablo\Models\Season.cs" />
     <Compile Include="Diablo\Models\StoryAct.cs" />
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ApiReader.cs" />
   </ItemGroup>
