--- a/BlizzardApiReader/BlizzardApiReader.csproj
+++ b/BlizzardApiReader/BlizzardApiReader.csproj
@@ -57,8 +57,10 @@
     <Compile Include="Diablo\Models\Quest.cs" />
     <Compile Include="Diablo\Models\Season.cs" />
     <Compile Include="Diablo\Models\StoryAct.cs" />
+    <Compile Include="RateLimiter\IRateLimiter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ApiReader.cs" />
+    <Compile Include="RateLimiter\TimeRateLimiter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
