--- a/BlizzardApiReader.Core/BlizzardApiReader.Core.csproj
+++ b/BlizzardApiReader.Core/BlizzardApiReader.Core.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Enums\Locale.cs" />
     <Compile Include="Enums\Region.cs" />
     <Compile Include="Extensions\EnumNameExtensions.cs" />
+    <Compile Include="Extensions\RegionExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
