Test Region extension method GetDefaultLocale

--- a/BlizzardApiReader.Core.Tests/BlizzardApiReader.Core.Tests.csproj
+++ b/BlizzardApiReader.Core.Tests/BlizzardApiReader.Core.Tests.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Attributes\EnumNameAttributeTests.cs" />
+    <Compile Include="Extensions\RegionExtensionsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
