--- a/BlizzardApiReader.Core/BlizzardApiReader.Core.csproj
+++ b/BlizzardApiReader.Core/BlizzardApiReader.Core.csproj
@@ -33,6 +33,9 @@
     <LangVersion>7.3</LangVersion>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -49,8 +52,13 @@
     <Compile Include="Extensions\EnumNameExtensions.cs" />
     <Compile Include="Extensions\RegionExtensions.cs" />
     <Compile Include="Models\ApiConfiguration.cs" />
+    <Compile Include="Models\ApiReader.cs" />
+    <Compile Include="Models\IRateLimiter.cs" />
+    <Compile Include="Models\TimeRateLimiter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
