--- a/BlizzardApiReader.Diablo/BlizzardApiReader.Diablo.csproj
+++ b/BlizzardApiReader.Diablo/BlizzardApiReader.Diablo.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -41,7 +44,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DiabloApi.cs" />
+    <Compile Include="Models\Artisan.cs" />
+    <Compile Include="Models\BattleAccount.cs" />
+    <Compile Include="Models\DetailedArtisan.cs" />
+    <Compile Include="Models\Hero.cs" />
+    <Compile Include="Models\Quest.cs" />
+    <Compile Include="Models\Season.cs" />
+    <Compile Include="Models\StoryAct.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BlizzardApiReader.Core\BlizzardApiReader.Core.csproj">
+      <Project>{386a02e4-d6b7-4371-8300-391d2baa2169}</Project>
+      <Name>BlizzardApiReader.Core</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
