--- a/BlizzardApiReader/BlizzardApiReader.csproj
+++ b/BlizzardApiReader/BlizzardApiReader.csproj
@@ -52,8 +52,14 @@
     <Compile Include="Diablo\DiabloApi.cs" />
     <Compile Include="Diablo\Models\Artisan.cs" />
     <Compile Include="Diablo\Models\BattleAccount.cs" />
+    <Compile Include="Diablo\Models\CharacterClass.cs" />
+    <Compile Include="Diablo\Models\CharacterClassSkill.cs" />
     <Compile Include="Diablo\Models\DetailedArtisan.cs" />
+    <Compile Include="Diablo\Models\Follower.cs" />
     <Compile Include="Diablo\Models\Hero.cs" />
+    <Compile Include="Diablo\Models\Item.cs" />
+    <Compile Include="Diablo\Models\ItemType.cs" />
+    <Compile Include="Diablo\Models\ItemTypeDetailed.cs" />
     <Compile Include="Diablo\Models\Quest.cs" />
     <Compile Include="Diablo\Models\Season.cs" />
     <Compile Include="Diablo\Models\StoryAct.cs" />
