--- a/BlizzardApiReader/BlizzardApiReader.csproj
+++ b/BlizzardApiReader/BlizzardApiReader.csproj
@@ -66,6 +66,8 @@
     <Compile Include="RateLimiter\IRateLimiter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ApiReader.cs" />
+    <Compile Include="RateLimiter\LimitersList.cs" />
+    <Compile Include="RateLimiter\RateLimitReachedException.cs" />
     <Compile Include="RateLimiter\TimeRateLimiter.cs" />
   </ItemGroup>
   <ItemGroup>
