Moved web client logic to different class

--- a/BlizzardApiReader/BlizzardApiReader.csproj
+++ b/BlizzardApiReader/BlizzardApiReader.csproj
@@ -67,6 +67,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ApiReader.cs" />
     <Compile Include="RateLimiter\TimeRateLimiter.cs" />
+    <Compile Include="WebClient\IWebClient.cs" />
+    <Compile Include="WebClient\WebClient.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
