Rename EnumName to EnumValue to better reflect its usecase

--- a/BlizzardApiReader.Core.Tests/BlizzardApiReader.Core.Tests.csproj
+++ b/BlizzardApiReader.Core.Tests/BlizzardApiReader.Core.Tests.csproj
@@ -57,7 +57,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Attributes\EnumNameAttributeTests.cs" />
+    <Compile Include="Extensions\EnumExtensionsTests.cs" />
     <Compile Include="Extensions\RegionExtensionsTests.cs" />
     <Compile Include="Models\ApiConfigurationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
