--- a/BlizzardApiReader.Core.Tests/BlizzardApiReader.Core.Tests.csproj
+++ b/BlizzardApiReader.Core.Tests/BlizzardApiReader.Core.Tests.csproj
@@ -50,6 +50,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.ValueTuple, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.ValueTuple.4.4.0\lib\net461\System.ValueTuple.dll</HintPath>
     </Reference>
@@ -61,6 +62,7 @@
     <Compile Include="Extensions\RegionExtensionsTests.cs" />
     <Compile Include="Models\ApiConfigurationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Limiters\TimeRateLimiterTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
