--- a/BlizzardApiReader.WorldOfWarcraft/BlizzardApiReader.WorldOfWarcraft.csproj
+++ b/BlizzardApiReader.WorldOfWarcraft/BlizzardApiReader.WorldOfWarcraft.csproj
@@ -41,7 +41,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Achievement.cs" />
+    <Compile Include="Models\Criteria.cs" />
     <Compile Include="Models\Realm.cs" />
+    <Compile Include="Models\RewardItem.cs" />
+    <Compile Include="Models\TooltipParams.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WorldOfWarcraftApi.cs" />
   </ItemGroup>
