--- a/BlizzardApiReader.Diablo/BlizzardApiReader.Diablo.csproj
+++ b/BlizzardApiReader.Diablo/BlizzardApiReader.Diablo.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BlizzardApiReader.Core\BlizzardApiReader.Core.csproj" />
   </ItemGroup>
 
